--- a/Burgerdex/View/Storyboards&Assets/Base.lproj/Main.storyboard
+++ b/Burgerdex/View/Storyboards&Assets/Base.lproj/Main.storyboard
@@ -818,7 +818,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="WPg-Nj-Ejj">
-                                                    <rect key="frame" x="15" y="28" width="24" height="24"/>
+                                                    <rect key="frame" x="14.999999999999998" y="28" width="30.333333333333329" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="23" id="oS2-aZ-Ljy"/>
                                                     </constraints>
@@ -827,20 +827,20 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="iN9-Bu-qW9">
-                                                    <rect key="frame" x="47" y="6" width="30" height="67"/>
+                                                    <rect key="frame" x="47" y="6" width="36.333333333333343" height="67"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
                                                     <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="seC-ao-A6s">
-                                                    <rect key="frame" x="80" y="6" width="5" height="67"/>
+                                                    <rect key="frame" x="86.333333333333329" y="6" width="5" height="67"/>
                                                     <color key="backgroundColor" red="0.8901960784313725" green="0.67843137254901964" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="5" id="WfI-fx-a5Q"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bacon Beast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0B-X9-eBE">
-                                                    <rect key="frame" x="93" y="20" width="157" height="23"/>
+                                                    <rect key="frame" x="99.333333333333314" y="20" width="157" height="23"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="157" id="wd4-bn-PJa"/>
                                                     </constraints>
@@ -849,14 +849,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="baconBeast" translatesAutoresizingMaskIntoConstraints="NO" id="SUV-FD-1lD">
-                                                    <rect key="frame" x="259" y="0.0" width="116" height="80"/>
+                                                    <rect key="frame" x="718" y="0.0" width="116" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="116" id="Lwd-N1-VCu"/>
                                                         <constraint firstAttribute="height" constant="80" id="h0V-oZ-S0S"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Burger Delight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDi-2T-eWi">
-                                                    <rect key="frame" x="93" y="39" width="158" height="21"/>
+                                                    <rect key="frame" x="99.333333333333314" y="39" width="610.66666666666674" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="cZd-o4-MJy"/>
                                                     </constraints>
@@ -1047,7 +1047,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Bacon Beast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XoR-n0-YRh">
-                                            <rect key="frame" x="105.33333333333331" y="20" width="106.66666666666669" height="23"/>
+                                            <rect key="frame" x="105.66666666666669" y="20" width="107" height="23"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" relation="lessThanOrEqual" constant="265" id="gOF-YG-a7m"/>
                                             </constraints>
@@ -1056,7 +1056,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RyU-ES-IU4">
-                                            <rect key="frame" x="92.333333333333329" y="7" width="5" height="64"/>
+                                            <rect key="frame" x="92.666666666666671" y="7" width="5" height="64"/>
                                             <color key="backgroundColor" red="0.89019607840000003" green="0.67843137249999996" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="5" id="Wr8-q6-Bgn"/>
@@ -1064,7 +1064,7 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Burger Delight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Bg-xz-SjV">
-                                            <rect key="frame" x="105.33333333333331" y="41" width="107.66666666666669" height="18"/>
+                                            <rect key="frame" x="105.66666666666669" y="41" width="108" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -1074,7 +1074,7 @@
                                             <color key="backgroundColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="j2f-R9-6fc">
-                                            <rect key="frame" x="16.000000000000004" y="28" width="34.333333333333343" height="24"/>
+                                            <rect key="frame" x="15.999999999999996" y="28" width="34.666666666666657" height="24"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -1211,7 +1211,7 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f07-UM-ohu">
-                                            <rect key="frame" x="16" y="97" width="346" height="19.333333333333329"/>
+                                            <rect key="frame" x="16" y="97" width="346" height="19.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
