--- a/NotificationView/Base.lproj/MainInterface.storyboard
+++ b/NotificationView/Base.lproj/MainInterface.storyboard
@@ -18,20 +18,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rAB-ba-Pke">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rAB-ba-Pke">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="bfZ-je-9Yq"/>
-                                    <constraint firstAttribute="height" constant="320" id="fdh-rx-lLP"/>
-                                </constraints>
+                                <color key="backgroundColor" red="0.21960784310000001" green="0.19215686269999999" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMS-zo-K6J">
+                                <rect key="frame" x="186" y="206" width="128" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="exs-uZ-enf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="115"/>
+                                <color key="textColor" white="1" alpha="0.69881742294520544" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cg1-OH-aVM">
+                                <rect key="frame" x="53" y="258" width="133" height="52"/>
+                                <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="61"/>
+                                <color key="textColor" white="1" alpha="0.69881742294520544" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.45882353186607361" green="0.74901962280273438" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rAB-ba-Pke" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" id="8qh-jo-t9X"/>
-                            <constraint firstItem="rAB-ba-Pke" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" id="QtI-LY-sOW"/>
-                            <constraint firstItem="rAB-ba-Pke" firstAttribute="bottom" secondItem="2BE-c3-nQJ" secondAttribute="bottom" id="gQQ-WH-cUa"/>
-                            <constraint firstItem="rAB-ba-Pke" firstAttribute="trailing" secondItem="2BE-c3-nQJ" secondAttribute="trailing" id="rjQ-PQ-QcN"/>
+                            <constraint firstItem="rAB-ba-Pke" firstAttribute="trailing" secondItem="2BE-c3-nQJ" secondAttribute="trailing" id="1xa-0Q-628"/>
+                            <constraint firstItem="eMS-zo-K6J" firstAttribute="leading" secondItem="Cg1-OH-aVM" secondAttribute="trailing" id="4Ds-Y5-Icj"/>
+                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="bottom" secondItem="Cg1-OH-aVM" secondAttribute="bottom" constant="10" id="E97-Ea-WB1"/>
+                            <constraint firstItem="Cg1-OH-aVM" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" constant="258" id="Ihc-ef-zbB"/>
+                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="trailing" secondItem="eMS-zo-K6J" secondAttribute="trailing" constant="6" id="Med-6Y-IEC"/>
+                            <constraint firstItem="rAB-ba-Pke" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" id="OY4-Jb-Jm8"/>
+                            <constraint firstItem="Cg1-OH-aVM" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" constant="53" id="SDs-2T-zzU"/>
+                            <constraint firstItem="eMS-zo-K6J" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" constant="206" id="gmY-zd-D16"/>
+                            <constraint firstItem="rAB-ba-Pke" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" id="hID-lt-LId"/>
+                            <constraint firstItem="rAB-ba-Pke" firstAttribute="bottom" secondItem="2BE-c3-nQJ" secondAttribute="bottom" id="lUH-Ac-epc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2BE-c3-nQJ"/>
                     </view>
@@ -39,6 +57,8 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="320"/>
                     <connections>
+                        <outlet property="catalogueNumberLabel" destination="Cg1-OH-aVM" id="NRB-MC-OJO"/>
+                        <outlet property="catalogueNumberNumber" destination="eMS-zo-K6J" id="8a5-L3-f2h"/>
                         <outlet property="imageView" destination="rAB-ba-Pke" id="KKM-5g-5rH"/>
                     </connections>
                 </viewController>
