Multiple upload carousel in place. Burgerdashboard view complete. 1.5.0 release.

--- a/Burgerdex/View/Storyboards&Assets/Base.lproj/Main.storyboard
+++ b/Burgerdex/View/Storyboards&Assets/Base.lproj/Main.storyboard
@@ -2121,6 +2121,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="ZEu-7C-FPA"/>
-        <segue reference="Vpp-rC-idl"/>
+        <segue reference="Grm-9m-Pei"/>
     </inferredMetricsTieBreakers>
 </document>
